--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name = "keywords" content = "Abdullohdan" />
+    <meta name = "keywords" content = "CUBERHAKKER007" />
     <meta name="description" content="Ichini oching...">
     <meta property="og:image" content="https://image.similarpng.com/very-thumbnail/2022/02/Black-gift-box-with-red-bow-on-transparent-background-PNG.png">
     <link rel="stylesheet" href="style.css">
@@ -15,41 +15,7 @@
     <title>Gift</title>
 </head>
 <body>
-    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
-        <i class="fa-solid fa-gift"></i>
-      </button>
-      
-      <div class="offcanvas offcanvas-start" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel">
-        <div class="offcanvas-header">
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-          <div>
-            //2
-            <br>
-            let unlilar = 'AUIOE'; <br>
-            let text = prompt('Ismingizni kiriting:'); <br>
-            let count = 0;<br>
-            text = text.toUpperCase();<br>
-            <br>
-            for(let i = 0; i < text.length; i++){<br>
-            <br>
-                for(let j = 0; j < unlilar.length; j++){<br>
-            <br>
-                        if(text[i] === unlilar[j]){<br>
-            <br>
-                            count++<br>
-            <br>
-                        }<br>
-            <br>
-                }<br>
-            <br>
-            }<br>
-            
-            console.log(count);
-          </div>
-        </div>
-      </div>
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <!-- JavaScript Bundle with Popper -->
 </body>
